--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "Renderer for the d3-pre prerendering pipeline",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "semistandard && mocha --timeout 20000"
   },
   "author": "Matthew Conlen",
   "license": "ISC",
   "dependencies": {
     "jsdom": "^3.1.2",
     "serve-folder": "^1.0.0"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^2.3.4",
+    "semistandard": "^7.0.4"
+  },
+  "semistandard": {
+    "ignore": [
+      "test/data/**/*"
+    ]
   }
 }
