--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Matthew Conlen",
   "license": "ISC",
   "dependencies": {
-    "jsdom": "^3.1.2",
+    "nightmare": "^2.1.3",
     "serve-folder": "^1.0.0"
   },
   "devDependencies": {
