--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Matthew Conlen",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^0.19.0",
+    "get-port": "^2.1.0",
     "nightmare": "^2.1.3",
+    "q": "^1.4.1",
     "serve-folder": "^1.0.0"
   },
   "devDependencies": {
