--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fivethirtyeight/d3-pre-renderer",
+  "name": "d3-pre-renderer",
   "version": "2.2.0",
   "description": "Renderer for the d3-pre prerendering pipeline",
   "main": "index.js",
