--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "semistandard && mocha --timeout 20000"
   },
   "author": "Matthew Conlen",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "cheerio": "^0.19.0",
     "get-port": "^2.1.0",
