--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "get-port": "^2.1.0",
-    "nightmare": "^2.1.3",
+    "nightmare": "~2.1.3",
     "q": "^1.4.1",
     "serve-folder": "^1.0.0"
   },
