--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "get-port": "^2.1.0",
     "nightmare": "~2.1.3",
     "q": "^1.4.1",
-    "serve-folder": "^1.0.0"
+    "serve-folder": "^1.0.0",
+    "svgo": "^0.6.6"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
